--- a/res/layout/altsms_message_list_item.xml
+++ b/res/layout/altsms_message_list_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
     
 	<ImageView
 	    android:id="@+id/imgPhoto"
 	    android:layout_width="48dp"
 	    android:layout_height="48dp"
-	    android:layout_alignParentBottom="false"
 	    android:layout_alignParentTop="true"
 	    android:layout_marginRight="6dip"
 	    android:contentDescription="contact photo"
+	    android:layout_marginTop="3dp"
 	    android:src="@drawable/ic_launcher" />
 	
 	 <TextView
@@ -21,7 +21,6 @@
 	     android:layout_alignParentBottom="false"
 	     android:layout_alignParentRight="true"
 	     android:layout_alignParentTop="true"
-	     android:layout_marginTop="4dp"
 	     android:layout_toRightOf="@id/imgPhoto"
 	     android:maxLines="100"
 	     android:singleLine="false"
