--- a/res/layout/activity_list_messages.xml
+++ b/res/layout/activity_list_messages.xml
@@ -8,6 +8,8 @@
         android:id="@+id/listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:divider="@color/white"
+		android:dividerHeight="1dp" />
 
 </RelativeLayout>
