--- a/res/layout/altsms_message_list_item.xml
+++ b/res/layout/altsms_message_list_item.xml
@@ -1,30 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-	<ImageView
-	    android:id="@+id/imgPhoto"
-	    android:layout_width="48dp"
-	    android:layout_height="48dp"
-	    android:layout_alignParentTop="true"
-	    android:layout_marginRight="6dip"
-	    android:contentDescription="contact photo"
-	    android:layout_marginTop="3dp"
-	    android:src="@drawable/ic_launcher" />
-	
-	 <TextView
-	     android:id="@+id/lblBody"
-	     android:layout_width="fill_parent"
-	     android:layout_height="wrap_content"
-	     android:layout_alignParentBottom="false"
-	     android:layout_alignParentRight="true"
-	     android:layout_alignParentTop="true"
-	     android:layout_toRightOf="@id/imgPhoto"
-	     android:maxLines="100"
-	     android:singleLine="false"
-	     android:text="Me: Hello, did you get my message? Me: Hello, did you get my message? Me: Hello, did you get my message? Me: Hello, did you get my message? "
-	     android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/imgPhoto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:contentDescription="contact photo"
+        android:src="@drawable/ic_launcher" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="16dp"
+        android:layout_toRightOf="@+id/imgPhoto"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/lblBody"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:maxLines="100"
+            android:singleLine="false"
+            android:text="Me: Hello, did you get my message? Me: Hello, did you get my message? Me: Hello, did you get my message? Me: Hello, did you get my message? "
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/lblDate"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="4dp" 
+            android:gravity="bottom|end"
+            android:text="12 March 2014"
+            android:textSize="8sp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
